[package]
name = "oncouch"
version = "0.2.4"
authors = ["Thiago Diniz da Silveira <thiagods.ti@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
keywords = ["subtitle", "movie", "srt", "mp4", "avi", "mkv"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strsim = "0.10.0"
regex = "1.3.7"
prettytable-rs = "^0.10"
