[package]
name = "oncouch"
version = "0.2.4"
authors = ["Thiago Diniz da Silveira <thiagods.ti@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
keywords = ["subtitle", "movie", "srt", "avi", "mkv"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strsim = "0.11.0"
regex = "1.10.3"
tabled = "0.15.0"
